dxr/tests/trybuild/slice.stderr
error: Deriving TryFromValue is not possible for structs that contain dynamically sized arrays, as they don't implement Sized. Try using a Vec here.
 --> tests/trybuild/slice.rs:5:12
  |
5 |     slice: [i32],
  |            ^^^^^

error: Deriving TryToValue is not possible for structs that contain dynamically sized arrays, as they don't implement Sized. Try using a Vec or slice reference here.
 --> tests/trybuild/slice.rs:5:12
  |
5 |     slice: [i32],
  |            ^^^^^
